--- a/_i18n/en/_posts/2022-10-20-點子松，打造無限未來.md
+++ b/_i18n/en/_posts/2022-10-20-點子松，打造無限未來.md
@@ -1,35 +1,34 @@
 ---
   layout: "post"
-  title: "Idea loose, build infinite future"
-  excerpt: "Co-creation by the whole people, let the future come through everyone."
+  title: "Ideathon: Crafting the Boundless Future"
+  excerpt: "The Ideathon welcomes societal co-creation, inviting everyone to explore future possibilities."
   image: "/assets/imgs/light-bulbs-1407610_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "數位策略"
+    - "Digital Strategy"
 ---
 
+Why is the moda’s hashtag #FreeTheFuture?
 
-The hashtag for the Ministry of Digital Development, why #FreeTheFuture? 
+Decades ago, renowned sci-fi writer William Gibson experienced the nascent technology of virtual reality. He insightfully remarked, "The future is already here — it's just not evenly distributed." At that time, VR was still in its infancy, far from becoming a part of daily life, yet that experience offered Gibson a glimpse into the future.
 
-Decades ago, the well-known science fiction writer William Gibson (William Gibson) experienced the emerging virtual reality (VR) technology and expressed his feelings: "The future has come, but it is not evenly distributed." At that time VR is not yet mature enough to be a part of everyday life, but the experience has given him a glimpse into the future. 
+The Ministry of Digital Affairs’ hashtag Free the Future symbolizes an endless realm of possibilities. The digital world transcends the constraints of time and space, facilitating our interactions and co-creations with a myriad of individuals, turning dreams into reality.
 
-Free the Future means that the future has infinite possibilities, because the digital world can not only break the limitation of time and space, but also allow us to communicate and co-create with all kinds of people, so that imaginary things can become reality. 
+In recent years, Taiwan has celebrated numerous collaborative achievements. For instance, the Presidential Hackathon provided a platform for those eager to enhance government digital services, both domestically and internationally. Today, it stands as a milestone in Taiwan's public innovation journey.
 
-In the past few years, Taiwan has achieved many fruitful results of national cooperation. For example, for friends at home and abroad who are interested in improving government digital services, the "Presidents Cup Hackathon" provides a place to realize good ideas, and has now become a milestone in Taiwan's public innovation. 
+From its inception, the moda has envisioned harnessing collective creativity to transform our physical social networks through Plurality — interoperable coexistence. The Ideathon aims to harness the boundless imagination of the public, taking a step towards the future.
 
-The Digital Development Department has been planning since the preparatory period. Through co-creation by the whole people, the physical interpersonal network will be further expanded into a multiverse of "co-presence, code-carrying interoperability". "Idea Pine" hopes to take a step towards the future through the unlimited imagination of the whole people. 
+Considering that 6G technology is expected to mature around 2040, its applications will inevitably shape our future lifestyles. After all, the future is an amalgamation of everyone's imagination.
 
-In view of the fact that 6G technology will mature around 2040, related applications will shape the future life. The future is originally formed by everyone's imagination, 
+Hence, the inaugural Ideathon is themed WeWe Futures: Plurality 2040. It welcomes individual and group submissions and offers immersive hybrid exhibitions, inviting the public to explore and envision the possibilities for 2040.
 
-Therefore, this year's first Ideas Song takes "WeWe Futures: 2040 Multiverse (Plurality)" as the theme, open to individual and group submissions, and also provides virtual and real The inclusive and immersive performance allows all people to discuss our expectations for 2040 through personal participation. 
+What sets the Ideathon apart from other hackathons? Traditionally, the Presidential Hackathon was a platform where citizens expressed their wishes, and digital experts devised and executed solutions. In contrast, the Ideathon welcomes societal co-creation, inviting everyone to explore future possibilities.
 
-How is IdeaThon different from other hackathons? In the past, the Presidents Cup Hackathon was open to citizens to make wishes, and several experts proposed solutions and implemented them on the ground; Ideasong welcomed social co-creation and invited all citizens to explore the possibility of the future together. 
+In other words, the Ideathon embraces a variety of submission formats, evolving from the hackathon's primary focus on web applications to promote broader public participation in ideation and action.
 
-In other words, Ideasong is completely open to all kinds of submission forms. On the basis of hackathons, it breaks away from the achievements of website applications in the past, and further expands the thinking and actions of the participation of the whole people. 
+The Future News individual competition encourages participants to create potential events or reports for 2040, without limiting the medium — be it visual, textual, or multimedia. The Future Prototype team competition motivates the development of design concepts for 2040, encompassing tangible products, intangible service mechanisms, or living entities. Finalists receive guidance from cross-disciplinary experts and leverage augmented reality technologies to refine their concept prototypes.
 
-"Future News" individual competition, all individuals are welcome to create events or reports that may happen in 2040, not limited to video, text or multimedia; "Future Prototype" team competition encourages the development of design concepts for 2040, including tangible Space commodities, intangible service mechanisms, or living entities. As long as you are shortlisted, you will receive interdisciplinary expert guidance, and through the assistance of extended reality technology, you will produce a prototype of the concept. 
+In 2015, after another VR experience, Gibson exclaimed, "They've done it!" This novelist, who had envisioned the digital world even before the widespread adoption of the internet, saw the future he wrote about come alive.
 
- In 2015, after experiencing VR again, Gibson said: "They did it!" The novelist who had already described the digital world before the Internet was popular, saw the future he described actually come. 
-
-No one can accurately predict the future, but everyone can bring the outline of the future to the present through imagination and creation, and then realize it through co-creation. This is the original intention of Ideasong, and also the expectation of the Digital Department: co-creation by all people, so that the future comes through everyone. 
+No one can predict the future with absolute certainty, but everyone can shape its outline through imagination and creation, actualizing it through collaborative efforts. This is the core essence of the Ideathon and the aspiration of the moda: collective creativity, ushering in the future through each individual's contributions.
