--- a/_i18n/en/_posts/2022-11-17-臺灣製造-信賴可靠.md
+++ b/_i18n/en/_posts/2022-11-17-臺灣製造-信賴可靠.md
@@ -1,36 +1,34 @@
 ---
   layout: "post"
-  title: "Made in Taiwan Reliable and Reliable"
-  excerpt: "MIT has always been a guarantee of quality. Today, T is more trustworthy (Trustworthiness)."
+  title: "Made in Taiwan: Reliable and Trusted"
+  excerpt: "Made in Taiwan has always been a quality assurance. Today, the T stands for Taiwan and Trustworthiness."
   image: "/assets/imgs/hands-gcaa92debe_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "數位產業"
-    - "資通安全"
+    - "Digital Industries"
+    - "Cyber Security"
 ---
 
+Recently, Brendan Carr, a member of the U.S. Federal Communications Commission (FCC), made his first trip to Taiwan. During his visit to the moda, he said Taiwan is a trustworthy economic and national security partner, and expressed eagerness for both sides to deepen cooperation on cybersecurity matters.
 
-A while ago, FCC Commissioner Brendan Carr visited Taiwan for the first time. When visiting the Ministry of Digital Technology, he pointed out that Taiwan is a reliable economic and national security partner, and he very much looks forward to the deepening of cooperation between the two sides in matters related to information security. 
+Carr's comments were not made lightly. Taiwan has achieved world leadership in the field of semiconductors and information and communication technology, boasting the world’s most comprehensive industry supply chain. Given Taiwan's exposure to overseas cyberattacks, it also has a wealth of practical cybersecurity experience.
 
-Commissioner Karl's statement has its own reasons. Taiwan has become the world leader in semiconductor and information and communication manufacturing, and has the most complete industrial supply chain in the world. And we are at the forefront of overseas cyber attacks, and we have rich practical experience in information security. 
+With recent rapid changes in the international situation, governments around the world have become increasingly concerned about the cybersecurity risks of technological products. For example, the U.K. announced its plans to completely remove Huawei's 5G products by 2027. As a result, the moda is integrating industrial cybersecurity and the cybersecurity industry to create a trustworthy supply chain.
 
-With the recent rapid changes in the international situation, governments of various countries are paying more and more attention to the security risks of technology products. For example, the United Kingdom announced that it will completely remove Huawei's 5G products by 2027. Therefore, the digital department will integrate "industrial information security" and "information security industry" to create a reliable supply chain. 
+To strengthen industry cybersecurity, in January of this year, the world's first semiconductor cybersecurity standard SEMI E187 was jointly developed by Taiwan's industry, government, academia and research sectors. This standard allows businesses to confirm the safety of equipment provided by suppliers. In order to assist more businesses with its implementation, practical operation guidelines were released in October to help businesses assess whether their products meet the standards.
 
-In terms of strengthening industrial information security, in January this year, the world's first semiconductor information security standard "SEMI E187" jointly created by Taiwan's industry, government, academia and research circles was officially released. Is the device secure. In order to help more operators to use it, practical operation guidelines were also released in October to guide the industry in evaluating whether the product complies with the regulations. 
+In the past, Taiwan businesses could only send their chips to overseas laboratories for safety testing. If a product failed the test, the business would need to modify the product and resubmit it for testing, leading to persistently high costs.
 
-In addition, in the past, Chinese manufacturers could only send chips to foreign laboratories for safety testing. If the inspection failed, the industry had to modify the product before sending it for inspection, resulting in high costs. 
+Now, the Chip Safety Joint Testing Laboratory, created by the moda’s Administration for Digital Industries, academia and private sector, enables local testing. This allows businesses to enter the international market more quickly and at a lower cost.
 
-Now, the "Chip Security Joint Testing Laboratory" is jointly established by the Ministry of Digital Industry, the academic community and the industry, providing local testing for the industry to enter the international market at a lower cost and faster. 
+From these experiences, it is clear that cybersecurity has become a necessary investment for the semiconductor industry and, indeed, all sectors. Taiwan began promoting its Six Core Strategic Industries two years ago, which includes the increasingly important cybersecurity industry.
 
-From these experiences, it can be seen that information security is already a necessary investment in semiconductors and even all walks of life; Taiwan began to promote the "six core strategic industries" two years ago, including the excellent information security industry. 
+In recent years, there has been significant progress in both the quality and quantity of cybersecurity startups in Taiwan. To date, 28 cybersecurity startups have been established, with Laiyi Digital and Boe Technology each winning the top award in the cybersecurity field at the SelectUSA Investment Summit over the past two years.
 
-In recent years, Taiwan's new information security enterprises have also made significant progress in "quality" and "quantity". Up to now, 28 information security innovations have been established, among which Laiyi Digital and Boou Technology have also won the In the past two years, he has won the first prize in the field of network security of SelectUSA, an investment summit in the United States. 
+The moda’s ADI, acting as a digital coach for all sectors, has also established Taiwan's first cybersecurity practice hub, the Shalun Cyber Security Service Base. This facility strengthens industrial cybersecurity and promotes the cybersecurity industry.
 
-As a digital "coach" for various industries, the Ministry of Digital Industry has also built Taiwan's first information security practice base "Shalun Information Security Service Base" to help strengthen industrial information security and promote the information security industry. 
+The cybersecurity hub, in response to domestic and foreign cybersecurity incidents, has designed a dozen attack scenarios. For these scenarios, the moda has also collaborated with domestic cybersecurity businesses to develop defense strategies. Teams can not only apply and test their products here, identifying their strengths and weaknesses, but also further understand suitable solutions.
 
-The information security base simulated and designed twelve sets of attack scenarios based on information security incidents at home and abroad. In response to these scenarios, we have also cooperated with domestic information security companies to develop defensive countermeasures. The team can not only use it to participate in the actual test, grasp the advantages and disadvantages of their own products, but also learn more about suitable solutions. 
+In other words, the Cyber Security Service Base is a training ground for cybersecurity companies, as well as a platform for matching supply and demand while gathering business opportunities in the cybersecurity industry.
 
-In other words, the information security service base is not only a training ground for information security manufacturers, but also a platform for matching supply and demand and gathering business opportunities in the information security industry. 
-
-Made in Taiwan (MIT) has always been a quality assurance. Today, T not only represents Taiwan, but also means trustworthiness. By strengthening industrial information security and developing the information security industry, the Digital Division will let the world see: "Made in Taiwan means trust and reliability."
