--- a/_i18n/en/_posts/2022-12-15-送麵線上雲端.md
+++ b/_i18n/en/_posts/2022-12-15-送麵線上雲端.md
@@ -1,33 +1,30 @@
 ---
   layout: "post"
-  title: "Send noodle online cloud"
-  excerpt: "\"Taiwan Cloud Marketplace\" has been used by more than 36,000 companies."
+  title: "Bringing Noodles to the Cloud"
+  excerpt: "As of this November, over 36,000 enterprises have embraced these solutions."
   image: "/assets/imgs/digitization-7580781_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "數位產業"
+    - "Digital Industries"
 ---
 
+A few days ago, I joined colleagues from the Industrial Development Bureau in visiting a renowned oyster noodles restaurant in Banqiao, New Taipei City, to better understand the application of the [Taiwan Cloud Marketplace]((https://www.tcloud.gov.tw/)) platform. With a rich history spanning 36 years, this eatery has transformed from a roadside stall to a well-established diner. The aroma of steaming noodles coupled with the rich taste of plump oysters left an indelible mark.
 
-A few days ago, my colleagues from the Industrial Development Administration and I went to the oil depot in Banqiao to learn about the application of the [Taiwan Cloud Market](https://www.tcloud.gov.tw/) platform . The store has been in business for 36 years. From roadside stalls to storefronts, it is already a time-honored snack bar in Banqiao. The steaming noodles and the sweet and plump oysters are impressive. 
+The owner told me that daily preparations begin as early as 6 a.m., with the doors opening to customers by 9:30 a.m. and closing at 7 p.m. Well-trained staff ensure the steady flow of patrons moves smoothly, with each customer served within an average of five minutes, from ordering to checkout.
 
-The boss said that they usually start preparing materials at six o'clock in the morning, and then open the store from nine thirty in the morning until seven o'clock in the evening. Even if there is an endless stream of customers, the well-trained clerks keep the queue from stagnating. From ordering to checkout, the meal can be served in an average of five minutes. 
+But juggling in-person orders, phone reservations, takeout requests and catering to customized demands such as "no coriander" proved challenging with just pen and paper. Miscommunications and errors were frequent.
 
-However, at the same time, the clerks are still overwhelmed with various customized needs such as on-site ordering and delivery, answering reservation calls, confirming takeaway orders, and "no coriander". Recording and verbal transmission using only pen and paper is time-consuming and error-prone. 
+This challenge found its solution through the Taiwan Cloud Marketplace platform initiated by the Ministry of Digital Affairs. This one-stop platform integrates processes across various governmental departments and offers a curated selection of cloud tools tailored for small and medium enterprises.
 
-This problem has found an effective solution through the "Taiwan Cloud Market" platform promoted by the Digital Industry Agency of the Ministry of Digital Affairs. 
+Any entity meeting the SME criteria or with a registered tax business can effortlessly complete the entire application, review, and contract processes within a mere 10 minutes on the platform. They can then embark on their digital transformation journey, even availing up to 30,000 units in digital subsidies. For those uncertain about which tools to opt for, online expert consultations are available.
 
-"Taiwan Cloud Bazaar" integrates cross-agency processes such as the Ministry of Finance, the Ministry of the Interior, and the Ministry of Economic Affairs, and selects various cloud tools and services suitable for small and medium-sized enterprises into a single platform. 
+With the help of the Taiwan Cloud Marketplace, the restaurant integrated the Quick Point Line Ordering Customer Service System, facilitating 24-hour online ordering and payment for their customers.
 
-As long as it meets the certification standards of small and medium-sized enterprises, or is a profit-making enterprise with tax registration, in just ten minutes, all procedures such as application, review and signing can be completed on the cloud market website, and the digital transformation plan can be directly purchased. You can also get up to 30,000 yuan in digital point subsidies. If you don't know how to choose the right solution, there are also expert consultants online to provide assistance. 
+This digital transition eliminated the need for phone orders, saving approximately three minutes of verbal confirmation per order. Not only did this alleviate the workload for the on-site team, but it also streamlined the ordering process and minimized errors. Moreover, the online ordering system tapped into a broader customer base, doubling the average purchase value per customer. Additionally, data analytics assisted in inventory management, optimizing procurement costs.
 
-Through the cloud market, Youkukou Noodle Shop adopts the "Quicker Line Ordering Customer Service System" to provide customers with 24-hour online ordering and online payment. 
+The restaurant’s success underscores the significance of subscription-based, data-portable cloud services as essential digital transformation tools for SMEs. Apart from aiding enterprises through the Cloud Marketplace, the government also encourages continuous innovation among IT service providers with the Digital Cloud Service Themed R&D Subsidy Program.
 
-Through digital operation, the clerk no longer needs to answer the phone, and the verbal confirmation time of about three minutes is eliminated for each order. Moreover, because of the online ordering system, it has reached a wider customer base and increased the consumption of online group buying, and the average unit price of each customer has increased by at least two times. In addition, through data collection, it is also helpful for raw material management, making the purchase cost more accurate. 
+Currently, the Taiwan Cloud Marketplace offers a plethora of solutions in categories like online store setup, marketing promotion, remote work, enterprise management, customer service, and market analysis. As of this November, over 36,000 enterprises have embraced these solutions.
 
-From the story of Youkukou noodle shop, we can see that the cloud service with open subscription system and transferable data is an important digital transformation tool for SME partners. Therefore, in addition to helping more business partners introduce cloud solutions through the cloud market, we also encourage service providers to continue to innovate through the "Digital Cloud Service Thematic R&D Subsidy Program" and develop simple and easy-to-use cloud solutions for all walks of life. plan. 
-
-At present, "Taiwan Cloud Market" has collected 15 types of cloud solutions such as online store opening, marketing promotion, remote office, enterprise management, customer service, and market analysis. As of November this year, there have been more than 15 cloud solutions Thirty-six thousand companies use it. 
-
-All walks of life have different operating objectives. The Digital Department continues to assist everyone in finding suitable digital tools and cloud services, so that all kinds of carefully crafted services and products can be delivered to customers easily and simply. 
+Different industries have varied operational goals. The moda remains committed to assisting all, ensuring that every meticulously crafted service and product effortlessly reaches its intended audience.
