--- a/_i18n/en/_posts/2023-03-16-讓無人機與信任齊飛.md
+++ b/_i18n/en/_posts/2023-03-16-讓無人機與信任齊飛.md
@@ -1,35 +1,33 @@
 ---
   layout: "post"
-  title: "Let drones fly with trust"
-  excerpt: "The joint testing laboratory has set an important milestone for \"Trust Technology\"."
+  title: "Drones and Trusted Tech Take Off Together"
+  excerpt: "TTC partnered with domestic industry leaders to create this initiative, further solidifying the concept of Trusted Tech."
   image: "/assets/imgs/drone-ttc.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "韌性建設"
-    - "資通安全"
+    - "Communications and Cyber Resilience"
+    - "Cyber Security"
 ---
 
+Recently, I engaged in discussions with colleagues at the Telecom Technology Center about the pace of organizational transformation. For two decades, TTC has been instrumental in key areas such as number portability services, testing technologies and related think tanks. It has also played a pivotal role in developing Taiwan’s telecommunications industry, making major contributions in a variety of fields.
 
-A while ago, my colleagues in the Telecommunications Technology Center (TTC) and I began to discuss the direction of transformation. TTC, under the supervision of the Department of Digital Technology, has made great contributions to the development of telecommunications in the past two decades, from code-carrying services, testing technology to policy think tanks. 
+In addition, TTC has dedicated itself to cybersecurity, achieving significant results. This success has led us to consider expanding the word “Telecom" in our name to "Trusted," which more accurately represents TTC’s core mission of delivering digital resilience for all.
 
-In recent years, TTC has fully invested in the development of information security protection and achieved fruitful results. It also makes us think about expanding the "Telecom" in the English name to "Trusted Technology Center". In line with its core business of helping to strengthen digital resilience. 
+A significant milestone was reached March 1 with the official establishment of the Drone Cybersecurity Joint Testing Laboratory. Assisted by the National Science Council, TTC partnered with domestic industry leaders to create this initiative, further solidifying the concept of Trusted Tech.
 
-The "Drone Information Security Joint Test Laboratory" officially established on March 1st, assisted by the National Science Council and jointly built by TTC and industry partners, has set an important record for "Trust Tech" milestone. 
+Drones have become essential tools, with uses ranging from agricultural surveys to disaster relief. Consequently, the government continues to develop plans for the drone industry, harnessing the combined expertise of industry, academia and research institutions to form the Taiwan Drone Alliance.
 
-UAVs can break through terrain restrictions, and have become an important auxiliary tool from agricultural and forestry surveys to disaster relief. Therefore, the government continues to develop plans for the development of the UAV industry, and combines the energy of industry, government, academia and research to establish the "Taiwan UAV Alliance." 
+But there have been instances where drones were misused. This presents a new challenge in cybersecurity, as well as raises significant national security concerns.
 
-However, cases of unmanned aerial vehicles being used for attacks and surveillance by some interested people have been heard so far. It has not only become a new information security challenge, but also an important national security issue. 
+In January, during the preliminary stages of the joint testing laboratory's establishment, experts and industry representatives collaborated to announce the Drone Cybersecurity Standards. These standards encompass the core testing areas of manufacturer cybersecurity maturity, product cybersecurity and operational cybersecurity.
 
-In January of this year, the Joint Test Laboratory, which is still in the preparatory stage, announced the "UAV Security Specifications" based on the opinions of experts and industry representatives from all walks of life. The content covers the three core testing items of the laboratory, including Manufacturer information security maturity, product information security, and site information security. 
+For instance, the manufacturer cybersecurity maturity serves as a security design blueprint, providing businesses with clear guidelines. The laboratory guarantees the safe development environment for drones by checking the development processes, supply chains, and software and hardware inventory management, ensuring safety is integrated into product features.
 
-Taking the first item of manufacturer information security maturity as an example, it is like providing a "security design blueprint" so that the industry can follow clear requirements. The laboratory will check the development process, supply chain, and software and hardware bill of materials management security to ensure the security of the drone development environment and correctly introduce security into product functions. 
+Product cybersecurity can be likened to a health check for drones. The laboratory acts as a center of well-being, offering varying levels of security assessments for drones. A higher level of successful testing indicates more comprehensive security measures. Apart from performing these checks, the lab also analyzes issues, providing detailed reports for businesses.
 
-The second product information security can be regarded as a "health check" for drones. The laboratory is like a health examination center, like providing health examination packages with different safety levels for drones. The higher the number of detection levels that can pass, the more complete the security protection will be. In addition to providing health checks for drones, the laboratory will also analyze problems and produce a complete report for industry reference. 
+Operational cybersecurity focuses on enhancing the protection of drone operational environments. This makes sure they are not influenced by external factors, such as data transmission interference. It is  akin to emphasizing thorough health checks and considering external risk factors. Maintaining a good living environment and healthy routines is essential for true well-being.
 
-In addition, the third field information security is to strengthen the protection of the UAV activity field to avoid being affected by the environment and other equipment, such as interference during data transmission. Just like in addition to excellent health checkups, we must also pay attention to external risk factors. Only by maintaining a good living environment and diet can we truly ensure our health. 
+The lab also follows guidelines announced by the Taiwan Information and Communication Standards Association, employing processes like threat modeling, vulnerability detection, penetration testing and impact analysis. It further offers recommendations for improving operational cybersecurity.
 
-Therefore, the laboratory will also follow the "Guidelines for the Evaluation of Internet of Things Field Information Security Protection" announced by the Taiwan Information and Communications Industry Standards Association, through the processes of threat modeling, vulnerability detection, penetration testing, and impact analysis. Suggestions for improving field information security. 
-
-We hope that TTC will not only assist the competent authority, the Ministry of Communications, to jointly establish domestic detection capabilities, but also be in line with international information security standards, and help the industry become a new force in the global drone industry. The Department of Digital Technology and TTC will continue to uphold the spirit of trust in technology to ensure information security that is "easy to defend, hard to attack, tough and reliable". 
-
+Our goal is for TTC to assist the Ministry of Transportation and Communications in establishing domestic testing capabilities, as well as aligning with international cybersecurity standards. We aim to support businesses in becoming a formidable force in the global drone industry. Both the Ministry of Digital Affairs and TTC will continue to uphold the spirit of Trusted Tech, ensuring a secure and robust information and communications environment.
