--- a/_i18n/zh-TW/_posts/2023-11-02-守護資訊完整-網路才有自由.md
+++ b/_i18n/zh-TW/_posts/2023-11-02-守護資訊完整-網路才有自由.md
@@ -14,7 +14,7 @@ tags:
 
 國慶連假時我自費赴日，參加在京都舉行的聯合國網路治理論壇（IGF）。從 2006 年至今，IGF 是聯合國關於數位政策的主要會議，今年有來自 178 國的六千多人現場參加。
 
-我首先參與的場次，是「網際網路未來宣言（ＤＦＩ）：共同行動」。DFI 是我擔任政委時，在 2022 年四月代表臺灣，與全球六十多國所簽署的協定，共同承諾將網際網路打造成保障人權、自由和互信的韌性建設。
+我首先參與的場次，是「網際網路未來宣言（DFI）：共同行動」。DFI 是我擔任政委時，在 2022 年四月代表臺灣，與全球六十多國所簽署的協定，共同承諾將網際網路打造成保障人權、自由和互信的韌性建設。
 
 在分組討論中，我和資安院顧問們，分別透過視訊和實體方式，參與政府分組，分享如何避免網際網路被威權勢力把持。而與會者最關心的，莫過於 AI 帶來的風險。
 
