--- a/_i18n/zh-TW/_posts/2023-11-02-守護資訊完整-網路才有自由.md
+++ b/_i18n/zh-TW/_posts/2023-11-02-守護資訊完整-網路才有自由.md
@@ -20,7 +20,7 @@ tags:
 
 前陣子，美國倡議團體「自由之家」公布網路自由度評估報告指出，AI 雖然快速發展、帶來便利，但也升高了極權監控和惡意造假的規模和速度，全球網路自由度已連續十三年下滑。
 
-日本首相岸田文雄在論壇演說時就指出，日本將根據今年五月Ｇ７廣島峰會共識，主導研議「廣島 AI 進程」，邀請全球產官學研社各界，共同確保可信任的 AI。
+日本首相岸田文雄在論壇演說時就指出，日本將根據今年五月 G7 廣島峰會共識，主導研議「廣島 AI 進程」，邀請全球產官學研社各界，共同確保可信任的 AI。
 
 打造數位信任，不只是各國政府刻不容緩的議題，對於數位產業，也已經是迫在眉睫的生存關鍵。我在京都與 Meta 全球事務總裁尼克・克萊格（Nick Clegg）會面，談及 AI 助長境外資訊操弄更為猖獗。他坦言，一旦連臉書現行「第三方事實查核計畫」也無法處理，將對線上資訊的完整性造成重大危害。
 
