--- a/_i18n/en/_posts/2023-11-23-昔日回響-未來之聲.md
+++ b/_i18n/en/_posts/2023-11-23-昔日回響-未來之聲.md
@@ -1,31 +1,30 @@
 ---
   layout: "post"
-  title: "Echoes of the past, sounds of the future"
-  excerpt: "If AI is properly built into digital infrastructure, it does have the opportunity to \"help humans become better.\""
+  title: "Echoes of the Past, Voices of the Future"
+  excerpt: "If AI is properly integrated into public infrastructures, it has the potential to help humanity become better."
   image: "/assets/imgs/beatles-5364078_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "民主網絡"
-    - "多元創新"
-    - "數位策略"
+    - "Democracy Network"
+    - "Plural Innovation"
+    - "Digital Strategy"
 ---
 
+Have you heard The Beatles' new song “Now and Then?” Recently, the legendary band, now down to Paul McCartney and Ringo Starr, released its “latest single.” The widely acclaimed offering is a prime example of AI for the collective good.
 
-Have you heard the Beatles’ new song? Recently, this legendary band, which has had two members pass away, released its latest single "Now And Then". Beatle Paul McCartney said it was AI that made it possible. 
+The song was recorded by John Lennon at home, singing and playing the piano into a tape recorder. For years after his untimely death, band members tried to reproduce the song, but the task was shelved due to the overly muddled quality of the recording. It was not until the recent maturation of AI-based technology, which can differentiate between singing and piano sounds, that a poignant and poetic finale was provided for The Beatles.
 
-Back then, John Lennon played and sang on the piano at home, and recorded it on tape. For years after his assassination, the band members tried to remake the song, but the sound quality was too fuzzy and had to be shelved. It was not until the technology matured in recent years that it was possible to successfully distinguish between singing and piano sounds, finally marking a sentimental and poetic end for The Beatles. 
+Listening to Lennon's voice, I am reminded of the similarly prematurely lost cybersecurity luminary and founder of Let’s Encrypt, Peter Eckersley. In recent years, Eckersley observed that while AI was evolving rapidly, it also began to pose risks to human society. Last year he founded The AI Objectives Institute (AOI) , with the hope that AI could "help humanity become better."
 
-While listening to John Lennon’s singing, I thought of Peter. Peter Eckersley. In recent years, Eckersley has observed that although AI has evolved rapidly, it has also gradually harmed human society. Therefore, he founded The AI Objectives Institute (AOI) last year, hoping that AI can "help humans become better." ”. 
+But in the midst of fervent preparations, Eckersley was lost to cancer. Fortunately, with widespread support, AOI continues to drive numerous experiments and studies to this day. One pilot project is Talk to the City.
 
-However, just as preparations were in full swing, Eckersley died suddenly of cancer. Fortunately, AOI, with the support of all parties, continues to promote many experiments and research to this day. One of the pilot projects is "Talk to the City". 
+The AI tool categorizes online comments, videos or statements into themes representing various opinions. Beyond creating visual graphs to fully present everyone's statements, its conversational language models also reflect data-informed thinking patterns. This affords more people the chance to understand different viewpoints.
 
-"My City Dialogue" uses AI to classify messages, videos, conference speeches and other materials into various topics. In addition to fully presenting everyone's speech, AI can also learn the speaker's thinking mode and become a language model for dialogue, giving more people the opportunity to understand the views and opinions of people with different opinions. 
+Previously, the Ministry of Digital Affairs utilized this mechanism during the Ideathon, organizing participants' thoughts on topics such as AI ethics and government use of data and AI. Those who did not participate in the workshop could understand participants' views, as well as engage in "dialogues" with AI to discover intersections of differing opinions, making decisions that stand on common ground without harming anyone.
 
-Previously, the Digital Department Diazong has used this mechanism to organize participants in the AI review workshop into topics such as "AI Ethics" and "Government Use of Data and AI". People who have not participated in the workshop can not only understand the different positions of the participants, but also continue to "dialogue" with the AI to find out the intersection of different opinions, and then make decisions that are in line with the consensus of all parties without harming anyone. 
+The experiences of "Now And Then" and Talk to the City show the world how AI transcends time and tide, turning the impossible into possible: a beloved music group disbanded for over 50 years can release a new song, and important discussions can continue developing after conclusion. It is evident that if AI is properly integrated into public infrastructures, it has the potential to help humanity become better.
 
-The experiences of "Here and Now" and "My City Talk" have shown the world how AI transcends time and life and death, making the impossible possible: a band that has been disbanded for more than 50 years can also release new songs; Important discussions can continue long after they are over. It can be seen that if AI is properly built into digital infrastructure, it does have the opportunity to "help humans become better." 
+A good place to start is with the Government Data Open Platform. This integrates AI public code, making it easier for users to find the open data they need and give feedback for corrections. In addition, we will prioritize the municipal services number “1999” of local governments in the next four years,  in order to alleviate the administrative burden on civil servants, as well as enhance access to public services.
 
-For this reason, we will introduce AI public programs starting from the "Government Data Open Platform" to make it easier for users to find the open data they need, provide feedback and suggestions for correction, and prioritize the 1999 service hotline of each county and city government. Case, within four years, we will assist willing units, reduce the administrative burden on civil servants, and improve the convenience of people's access to public services. 
-
-In the near future, AI will not just be an occasional digital tool used here and now. Through open source collaboration and social testing, we gradually promote responsible AI and become the cornerstone of an infinite future for you and me. 
+Going forward, AI won’t be merely a digital tool for occasional use every now and then. Through open-source collaboration and societal evaluation, we are shaping up a foundation where responsible AI enables us to free the future — together.
