--- a/_i18n/en/_posts/2023-12-21-「超智慧對齊」能打造更安全-AI？.md
+++ b/_i18n/en/_posts/2023-12-21-「超智慧對齊」能打造更安全-AI？.md
@@ -1,31 +1,32 @@
 ---
   layout: "post"
-  title: "Can \"super-intelligent alignment\" create safer AI?"
-  excerpt: "AI systems that frequently produce hallucinations will no longer win the favor of investors."
+  title: "Can Superalignment help AI safety?"
+  excerpt: "AI systems with frequent hallucinations will come to be avoided by investors."
   image: "/assets/imgs/steampunk-3169877_1280.jpg"
-  author: "唐鳳、江殷年"
+  author: "Audrey Tang, Vanessa Chiang"
   category: "blog"
   tags: 
-    - "數位產業"
+    - "Digital Industries"
 ---
 
+Recently, Jensen Huang – co-founder, president and CEO of U.S. multinational tech giant Nvidia Corp., recently said AI will surpass human beings in the next five years. In keeping with this seeming fait accompli, Sam Altman – CEO of OpenAI – said AI development cannot be stopped.
 
-Recently, Huang Renxun predicted that AI will catch up with humans in the next five years. Altman, the newly returned CEO of OpenAI, also emphasized that AI development will not stop. However, its co-founder Sutskevi is worried that the next generation of AI may bring major social risks. The "Superalignment" ([Superalignment](https://openai.com/blog/introducing-superalignment)) project he leads was born for this purpose. 
+These fears are shared by Ilya Sutskever — co-founder and chief scientist at OpenAI. But his farsighted [superalignment project](https://openai.com/blog/introducing-superalignment) may offer a viable way of avoiding what can only be seen as a major societal-scale risk.
 
-To me, the so-called super-intelligent alignment is "automated alignment" so that AI can continue to meet human expectations. To understand this concept, we need to first understand the two steps of making AI, which are pre-training and fine-tuning. 
+For me, superalignment means automated alignment — ensuring AI continues to fit human expectations. But we need to first understand the formulation of AI as a two-step process, namely pre-training and fine-tuning, before going deeper.
 
- "Pre-training" is to obtain a huge amount of data and compress it into a model. Then when inputting a request, the answer will be generated based on the uniqueness of the original data. For example, the model will notice the commonalities of faces, such as outlines and colors, and after receiving instructions, it will draw a new face. However, when training data is insufficient, specious answers may be produced, which is the so-called "AI illusion." 
+Pre-training is akin to taking a mass of data and compressing it into a model, which can then produce answers according to the commonality of the obtained data. For example, the model may recognize the commonality of faces, such as outlines and colors. After receiving instructions, it can draw a new face. However, when training data is insufficient for the task at hand, the results may appear plausible, but are actually wrong. This is more commonly known as an AI “hallucination.”
 
- "Fine-tuning" uses a reward and punishment mechanism to allow the model to learn which answers are more acceptable to humans. For example, models should reject fabricated, harmful answers and give answers that are transparent and fully reveal confidence levels. If the relevant material is not provided in the training materials, the AI should also explain it accordingly. 
+Fine-tuning helps to teach the model to output answers acceptable to humans through rewarding good ones and dissuading bad ones. Confabulated and harmful responses are counterproductive, and transparency associated with confidence levels are important. If the answers are not based on the training materials, the model must say so.
 
- “Super-intelligent alignment” refers to the use of existing AI systems to assist humans in completing most of the fine-tuning work. 
+Superalignment is essentially about leveraging existing AI systems in assisting humans to do most of the fine-tuning work.
 
-For example: when hearing a complex patent infringement case, the judge himself may not be an expert in the field, but as long as the matter is debated by professional lawyers from both sides, the judge can judge whether the argument complies with the regulations. The principle of super-intelligent alignment is to put humans in a position similar to that of a judge. 
+For example, a judge can hear a complex patent infringement case without being an expert in the field. As long as the proceedings involve lawyers specialized in the particular area, the judge needs only determine whether the issues are in accordance with the law. Similarly, superalignment puts humans in the judge’s place.
 
-Looking to the future, even by co-writing a "Constitutional AI" document, AI can automatically align with these principles - the "Collective Intelligence Project" and Anthropic have [demonstrated](https:// www.anthropic.com/index/collective-constitutional-ai-aligning-a-language-model-with-public-input). For example, a small AI trained on the Universal Declaration of Human Rights can align with the next generation of large AI, making the latter closer to what people expect. 
+Going forward, people can co-create a Constitutional AI document, and  AI models can be aligned to the prescribed norms as The Collective Intelligence Project and Anthropic have ably [demonstrated](https://www.anthropic.com/index/collective-constitutional-ai-aligning-a-language-model-with-public-input). Case in point, a small AI, trained in the United Nations’ Universal Declaration of Human Rights, can then calibrate a larger AI model’s alignment.
 
-As policy makers, our job is to give signals to the market through policies and government investment. The recently opened AI Evaluation Center has announced the ten key points that AI should meet, namely safety, flexibility, accuracy, accountability, privacy, explainability, fairness, transparency, reliability, and information security. If you go against these ten things, although it will not be banned immediately, the government does not encourage deployment. 
+As policymakers, our job is to send clear signals to the market through tailored initiatives and state investment. The recently opened AI Evaluation Center is playing its part by issuing a 10-point plan governing AI models. This comprises security, resilience, accuracy, responsibility, privacy, interpretability, fairness, transparency, reliability and security. If a model proves problematic, it will not be banned immediately, but the government cannot encourage its deployment.
 
-Before joining the cabinet in 2016, I assisted Apple’s Siri team for six years. At that time, the most important thing for the team was accuracy and harmlessness. I believe that as alignment technology matures, AI systems that frequently produce hallucinations will no longer be favored by investors. 
- 
-This is like the 1980s, when humans discovered that the refrigerant used in refrigerators would destroy the ozone layer, and countries quickly signed the "Montreal Protocol" and agreed on a period of discontinuation. This is a clear signal to investors: If we don’t adjust quickly, other competing products will soon take over. On the contrary, when more stable and secure AI appears on the market for consumers to use, investment and consumption will guide the industry and avoid going astray. 
+When I assisted Apple Inc.’s Siri team from 2010 to 2016, the most important thing at that time was accuracy and harmlessness. As alignment techniques mature, I believe AI systems with frequent hallucinations will come to be avoided by investors.
+
+This is like the revelation that some gasses used in refrigerators can destroy the ozone layer; signatories to the Montreal Protocol agreed they should be banned. It was a clear signal to the manufacturers that such processes must be adjusted quickly or the product will cease to exist. Conversely, when more stable and safe AI systems emerge in the market, subsequent consumer response and investment will ensure the industry does not go astray. 
